--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -60,16 +60,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbarback">
-            <com.google.android.gms.ads.AdView
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
+
+            <RelativeLayout
                 android:id="@+id/adView"
-                android:background="@color/black"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="true"
-                ads:adSize="BANNER"
-                ads:adUnitId="@string/banner_ad_unit_id" />
+                android:layout_gravity="center_horizontal|center|center_vertical"
+                android:background="@android:color/black" />
 
             <TextView
                 android:id="@+id/txtAmount"
