--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,14 +11,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
+        <RelativeLayout
             android:id="@+id/adView"
-            android:background="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            ads:adSize="BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center_horizontal|center|center_vertical"
+            android:background="@android:color/black" />
 
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/swipyRefreshCurrencies"
