--- a/app/src/main/res/layout/pop_up_share.xml
+++ b/app/src/main/res/layout/pop_up_share.xml
@@ -68,7 +68,7 @@
                 style="@style/pop_up_full_boton1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/share_facebook"
+                android:text="@string/share_on_facebook"
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/dosis_medium"
                 android:background="@drawable/border_buttont_facebook"
@@ -79,7 +79,7 @@
                 style="@style/pop_up_full_boton1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/share_twitter"
+                android:text="@string/share_on_twitter"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/dosis_medium"
                 android:background="@drawable/border_buttont_twitter"
