--- a/app/src/main/res/layout/activity_currency.xml
+++ b/app/src/main/res/layout/activity_currency.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:fontFamily="@font/dosis_medium"
             android:text="@string/titleCurrency"></TextView>
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarback"
             style="@style/tittleSettingsSymbol"
             android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
 
 
         <!--searchView layout-->
-        <android.support.v7.widget.SearchView
+        <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
             app:searchIcon="@drawable/ic_search"
             app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarsearch"
             style="@style/tittleSettingsSymbol"
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:layout_gravity="center_horizontal|center|center_vertical"
             android:background="@android:color/black" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerCurrency"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -83,4 +83,4 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:textColor="@color/dark_color" />
     </RelativeLayout>
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
