--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
                 android:layout_below="@+id/linHeader"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerCurrencyDashboard"
                     android:layout_width="match_parent"
                     android:background="@color/colorPrimaryDark"
